--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -36,7 +36,7 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: pypi
-      url: https://pypi.org/p/profile-decorator
+      url: https://pypi.org/p/profiling-decorator
     permissions:
       id-token: write  # IMPORTANT: mandatory for trusted publishing
 
@@ -100,7 +100,7 @@ jobs:
 
     environment:
       name: testpypi
-      url: https://test.pypi.org/p/profile-decorator
+      url: https://test.pypi.org/p/profiling-decorator
 
     permissions:
       id-token: write  # IMPORTANT: mandatory for trusted publishing
