--- a/.github/workflows/blacken.yml
+++ b/.github/workflows/blacken.yml
@@ -12,9 +12,13 @@ jobs:
       with:
         python-version: '3.x'  # Use the latest Python 3 version
     - name: Install Black
-      run: pip install black
+      run: pip install black isort
     - name: Run Black
-      run: black .
+      run: |
+        black .
+    - name: Run isort
+      run: | 
+        isort .
     - name: Commit changes
       uses: stefanzweifel/git-auto-commit-action@v4
       with:
